# mneme

./: Cargo.toml  LICENSE  autoresearch.bench.sh  autoresearch.jsonl  bench-ab.sh  bench.sh
.github/workflows/: ci.yml
docs/: COMPLETION.md  DESIGN.md  E2E_TESTING.md  PROTOCOL.md  THROUGHPUT.md  TOKIO_PORT.md
src/: client.rs  lib.rs  main.rs  protocol.rs  ring.rs  server.rs  socket.rs
tests/: backpressure.rs  child_exit.rs  cli_kill.rs  cli_list.rs  cli_parse.rs  e2e_resize.rs  integration.rs  latency.rs  multi_client.rs  protocol_edge.rs  replay.rs  socket_unit.rs
tests/helpers/: resize_probe.py
